--- a/deliverance-talk.html
+++ b/deliverance-talk.html
@@ -218,7 +218,7 @@ Dresden</p>
     </li>
     <li>Wasserfallmodell
         <ul>
-            <li>Spätere Nachbesserungen aufwendig</li>
+            <li>Spätere Nachbesserungen aufwändig</li>
             <li>Entwicklungsteam muss oft involviert werden</li>
         </ul>
     </li>
